--- a/index.html
+++ b/index.html
@@ -58,7 +58,31 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
-
+            <!-- Time-R1 -->
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/TimeR1_comparison.png" alt="Time-R1" width="248" height="134.72" align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <span class="papertitle">
+                  <a href="https://arxiv.org/abs/2503.13377v2">Time-R1: Post-Training Large Vision Language Model for Temporal Video Grounding</a>
+                </span>
+                <br>
+                <a href="https://openreview.net/profile?id=~Ye_Wang12">Ye Wang*</a>, <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang*</a>, <strong>Boshen Xu*</strong>, <a href="https://openreview.net/profile?id=~Yang_Du6">Yang Du</a>, <a href="https://openreview.net/profile?id=~Kejun_Lin1">Kejun Lin</a>, <a href="https://openreview.net/profile?id=~Zihan_Xiao1">Zihan Xiao</a>,
+                <a href="https://yuezih.github.io/">Zihao Yue</a>, <a href="https://openreview.net/profile?id=~Jianzhong_Ju1">Jianzhong Ju</a>, <a href="https://openreview.net/profile?id=~Liang_Zhang10">Liang Zhang</a>, <a href="https://openreview.net/profile?id=~Dingyi_Yang1">Dingyi Yang</a>, Xiangnan Fang, Zewen He, 
+                <a href="https://openreview.net/profile?id=~Zhenbo_Luo2">Zhenbo Luo</a>, <a href="https://jarviswang94.github.io/">Wenxuan Wang</a>, Junqi Lin, <a href="https://openreview.net/profile?id=~Jian_Luan1">Jian Luan</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <br>
+                <em>arxiv</em>, 2025
+                <br>
+                <a href="https://xuboshen.github.io/Time-R1/">project page</a> /
+                <a href="https://github.com/xuboshen/EgoDTM">code (to release soon)</a> /
+                <a href="https://arxiv.org/abs/2503.13377v2">arxiv</a>
+                <p></p>
+                <p>We introduce <strong>Time-R1</strong> framework, <strong>TimeRFT</strong> training, and <strong>TVGBench</strong> for LVLM evaluation, to advance the field of using LVLM for temporal video grounding. 
+                  Time-R1 achieves state-of-the-art performance on TVG using only 2.5K data for RL fine-tuning, with improved performance on 4 VQA benchmarks.  </p>
+              </td>
+            </tr>
+            <!--/ Time-R1 -->
 
             <!-- EgoDTM -->
             <tr>
@@ -89,7 +113,7 @@
               </td>
               <td width="75%" valign="middle">
                 <span class="papertitle">
-                  <a href="http://arxiv.org/abs/2503.13377">TimeZero: Temporal Video Grounding with Reasoning-Guided LVLM</a>
+                  <a href="https://arxiv.org/abs/2503.13377v1">TimeZero: Temporal Video Grounding with Reasoning-Guided LVLM</a>
                 </span>
                 <br>
                 <a href="https://openreview.net/profile?id=~Ye_Wang12">Ye Wang*</a>, <strong>Boshen Xu*</strong>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <a href="https://openreview.net/profile?id=~Zihan_Xiao1">Zihan Xiao</a> , <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang</a>, 
@@ -250,7 +274,10 @@
               
                 <table width="100%" align="center" border="0" cellpadding="20"><tbody>
                   <ul>
-                    <li>Conference Reviewer for ICLR, ACM MM, ACCV.</li>
+                    <li>Conference Reviewer for CVPR, NeurIPS, ICLR, ACM MM, ACL, ACCV.</li>
+                  </ul>
+                  <ul>
+                    <li>Journal Reviewer for TOMM.</li>
                   </ul>
                   <ul>
                     <li>Teaching Assistant for Multimedia Application Technology (RUC 2024 Fall).</li>
