--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focusing on egocentric vision and related topics that benefit VR/AR/Embodied AI.
+                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, long-form video grounding, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focusing on egocentric vision and related topics that benefit VR/AR/Embodied AI.
                   </p>
                 <p>I am a second-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
