add slides to ICLR25

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                 <a href="https://github.com/xuboshen/EgoNCEpp">code</a>
                 /
                 <a href="https://openreview.net/pdf?id=M8gXSFGkn2">paper</a>
-
+                /
+                <a href="storage/learning_to_perceive_EgoHOI-xbs-nus.pdf">slides</a>
                 <p></p>
                 <p>We propose <strong>EgoNCE++</strong>, an asymmetric contrastive learning pretraining objective to solve the EgoVLMs' weakness in distinguishing HOI combinations with word variations.</p>
               </td>
