Time-R1 page updage

--- a/Time-R1/index.html
+++ b/Time-R1/index.html
@@ -61,7 +61,7 @@
               <span class="author-block">
                 <a href="">Ziheng Wang</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a href="">Boshen Xu</a><sup>1*</sup>,</span>
+              <a href="">Boshen Xu</a><sup>1*&ddagger;</sup>,</span>
             <span class="author-block">
               <a href="">Yang Du</a><sup>1</sup>,</span>
             <span class="author-block">
@@ -94,7 +94,7 @@
           </div>
           <!-- Add here: insert this block right after the last authors' affiliation block -->
           <div class="has-text-centered" style="margin-top: 1em;">
-            <p><sup>*</sup>Equal contribution, listed in alphabetical order</p>
+            <p><sup>*</sup>Equal contribution, listed in alphabetical order; <sup>&ddagger;</sup>Project lead;</p>
             <p><sup>&dagger;</sup>Corresponding author: Qin Jin (<a href="mailto:jqin@ruc.edu.cn">qjin@ruc.edu.cn</a>)</p>
           </div>
 
@@ -130,17 +130,17 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/www-Ye/TimeZero"
+                <a href="https://github.com/xiaomi-research/time-r1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (comming soon in the TimeZero repo)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://huggingface.co/collections/Boshenxx/time-r1-683d65a07b5736f7168bc602"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -304,15 +304,17 @@ GF, ME, SF refers to Gaussian Filtering, Multi-Epoch, and Sample Filtering per e
 
 
 
-<!-- 
-
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{
+    <pre><code>@article{wang2025timer1,
+      title={Time-R1: Post-Training Large Vision Language Model for Temporal Video Grounding}, 
+      author={Wang, Ye and Wang, Ziheng and Xu, Boshen and Du, Yang and Lin, Kejun and Xiao, Zihan and Yue, Zihao and Ju, Jianzhong and Zhang, Liang and Yang, Dingyi and Fang, Xiangnan and He, Zewen and Luo, Zhenbo and Wang, Wenxuan and Lin, Junqi and Luan, Jian and Jin, Qin},
+      journal={arXiv preprint arXiv:2503.13377},
+      year={2025},
 }</code></pre>
   </div>
-</section> -->
+</section>
 
 <footer class="footer">
   <div class="container">
