update Time-R1 page models

--- a/Time-R1/index.html
+++ b/Time-R1/index.html
@@ -145,7 +145,7 @@
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data (comming soon)</span>
+                  <span>Data & Models</span>
                   </a>
             </div>
 
