--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <em>arxiv</em>, 2025
                 <br>
                 <a href="https://xuboshen.github.io/Time-R1/">project page</a> /
-                <a href="https://github.com/xuboshen/EgoDTM">code (to release soon)</a> /
+                <a href="https://github.com/xiaomi-research/time-r1">code</a> /
                 <a href="https://arxiv.org/abs/2503.13377v2">arxiv</a>
                 <p></p>
                 <p>We introduce <strong>Time-R1</strong> framework, <strong>TimeRFT</strong> training, and <strong>TVGBench</strong> for LVLM evaluation, to advance the field of using LVLM for temporal video grounding. 
@@ -122,7 +122,7 @@
                 <em>arxiv</em>, 2025
                 <br>
                 <a href="https://github.com/www-Ye/TimeZero">code</a> /
-                <a href="http://arxiv.org/abs/2503.13377">paper</a>
+                <a href="http://arxiv.org/abs/2503.13377v1">paper</a>
                 <p></p>
                 <p>We propose <strong>TimeZero</strong>, a reasoning-guided LVLM for temporal video grounding that extends inference through reinforcement learning to reason about video-language relationships. Achieves state-of-the-art performance on Charades-STA benchmark.</p>
               </td>
