--- a/Time-R1/index.html
+++ b/Time-R1/index.html
@@ -102,7 +102,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>AIM3 Lab, Renmin University of China,</span>
             <span class="author-block"><sup>2</sup>MiLM Plus, Xiaomi Inc.</span>
-            <span class="author-block"><sup>3</sup>Beijing University of Posts and Telecommunications </span>
+            <span class="author-block"><sup>3</sup>Independent Researcher </span>
 
           </div>
           <a href="https://arxiv.org/abs/2503.13377">arxiv, 2025</a>
