--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, long-form video grounding, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focusing on long video understanding and multi-modal large language models.
-                  </p>
+                <!-- <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, long-form video grounding, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focusing on long video understanding and multi-modal large language models. -->
+                  <!-- </p> -->
                 <p>I am a third-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
                   
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:boshenx@ruc.edu.cn">Email</a> &nbsp;/&nbsp;
-                  <a href="data/BoshenXu-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <!-- <a href="data/BoshenXu-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/BoshenXu-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp; -->
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
