--- a/TimeViper/index.html
+++ b/TimeViper/index.html
@@ -57,17 +57,17 @@
           <h1 class="title is-1 publication-title">TimeViper: A Hybrid Mamba-Transformer Vision-Language Model for Efficient Long Video Understanding</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="">Boshen Xu</a><sup>1*&ddagger;</sup>,</span>
+              <a href="https://xuboshen.github.io/">Boshen Xu</a><sup>1*&ddagger;</sup>,</span>
             <span class="author-block">
-              <a href="">Zihan Xiao</a><sup>1*</sup>,</span>
+              <a href="https://openreview.net/profile?id=~Zihan_Xiao1">Zihan Xiao</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a href="">Jiaze Li</a><sup>2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=eIuGSe4AAAAJ&hl=en">Jiaze Li</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="">Jianzhong Ju</a><sup>2</sup>,</span>
+              <a href="https://openreview.net/profile?id=~Jianzhong_Ju1">Jianzhong Ju</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="">Zhenbo Luo</a><sup>2</sup>,</span>
+              <a href="https://openreview.net/profile?id=~Zhenbo_Luo2">Zhenbo Luo</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="">Jian Luan</a><sup>2</sup>,</span>
+              <a href="https://openreview.net/profile?id=~Jian_Luan1">Jian Luan</a><sup>2</sup>,</span>
             <span class="author-block">
               <a href="https://www.jin-qin.com">Qin Jin</a><sup>1&dagger;</sup>,
             </span>
@@ -84,12 +84,12 @@
             <span class="author-block"><sup>2</sup>MiLM Plus, Xiaomi Inc.</span>
 
           </div>
-          <a href="https://arxiv.org/abs/2503.13377">arxiv, 2025</a>
+          <a href="https://arxiv.org/abs/2511.16595">arxiv, 2025</a>
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org"
+                <a href="https://arxiv.org/abs/2511.16595"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -114,7 +114,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code (TBD)</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
@@ -386,7 +386,7 @@ GF, ME, SF refers to Gaussian Filtering, Multi-Epoch, and Sample Filtering per e
     <pre><code>@article{xu2025timeviper,
   title={TimeViper: A Hybrid Mamba-Transformer Model for Efficient Long Video Understanding},
   author={Xu, Boshen and Xiao, Zihan and Li, Jiaze and Ju, Jianzhong and Luo, Zhenbo and Luan, Jian and Jin, Qin},
-  journal={arXiv preprint arXiv:xxxx.xxxxx},
+  journal={arXiv preprint arXiv:2511.16595},
   year={2025}
 }</code></pre>
   </div>
