--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
+            <!-- TimeViper -->
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/timeviper.png" alt="TimeViper" width="248" height="100.83" align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <span class="papertitle">
+                  <a href="https://arxiv.org/abs/2511.16595">TimeViper: A Hybrid Mamba-Transformer Vision-Language Model for Efficient Long Video Understanding</a>
+                </span>
+                <br>
+                <strong>Boshen Xu*<sup style="font-size: 0.6em;">&ddagger;</sup></strong>, <a href="https://openreview.net/profile?id=~Zihan_Xiao1">Zihan Xiao*</a>, <a href="https://scholar.google.com/citations?user=eIuGSe4AAAAJ&hl=en">Jiaze Li</a>,
+                <a href="https://openreview.net/profile?id=~Jianzhong_Ju1">Jianzhong Ju</a>, 
+                <a href="https://openreview.net/profile?id=~Zhenbo_Luo2">Zhenbo Luo</a>, <a href="https://openreview.net/profile?id=~Jian_Luan1">Jian Luan</a>, <a href="http://www.jin-qin.com/">Qin Jin<sup style="font-size: 0.6em;">&dagger;</sup></a>
+                <br>
+                <em>arxiv</em>, 2025
+                <br>
+                <a href="https://xuboshen.github.io/TimeViper/">project page</a> /
+                <a href="https://github.com/xiaomi-research/timeviper">code</a> /
+                <a href="https://arxiv.org/abs/2511.16595">arxiv</a>
+                <p></p>
+                <p>We introduce <strong>TimeViper</strong>  a hybrid vision-language model for long video understanding. This work represents an initial step towards developing, interpreting, and compressing hybrid Mamba-Transformer architectures. </p>
+              </td>
+            </tr>
+            <!--/ Time-R1 -->
             <!-- Time-R1 -->
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
